fix path, other overrides, report creator